--- a/eval_data/plot_setpoint_length.ipynb
+++ b/eval_data/plot_setpoint_length.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9357e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "35e8a3fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,7 @@
     "element =[0,[0]]\n",
     "logdir = 'logfiles'\n",
     "bagname = 'fixed_sp_allaxis'\n",
-    "PIDvalues = 'P12500I250D250'\n",
+    "PIDvalues = 'P7500I10D750'\n",
     "\n",
     "\n",
     "currentdir = os.path.join(os.getcwd(),logdir,bagname,PIDvalues)\n",
@@ -77,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5ff20feb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f8715c52",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f4ac34f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "35b4ad70",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "68d4ea1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e7a7437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a1a2810f",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f167b919",
    "metadata": {
     "scrolled": true
    },
@@ -283,7 +273,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a02e47c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4609f5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c823d380",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6591bb39",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42ffe6cf",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +406,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "3e253e47",
    "metadata": {
     "scrolled": true
    },
@@ -481,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
